js/js.translator/testData/incremental/invalidation/changeCompanionBlockChild/lib2/l2.0.kt
var staticInitChild = false

class Child : Parent() {
    companion {
        val someGet: Int = 0
    }
}
